# candella-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
candella_sdk/: __init__.py  cli.py  sdk.py
cookiecutter-candella-app/: cookiecutter.json
cookiecutter-candella-app/{{ cookiecutter.name.replace(" ", "") }}.aosapp/: manifest.json  {{ cookiecutter.name }}.rpy
cookiecutter-candella-framework/: cookiecutter.json
cookiecutter-candella-framework/{{ cookiecutter.name.replace(" ", "") }}.aosframework/: manifest.json  {{ cookiecutter.name.replace(" ", "") }}.rpy
examples/InvalidManifestKey.aosapp/: manifest.json
examples/MissingIconset.aosapp/: MissingIconset.rpy  manifest.json
examples/MissingRequired.aosapp/: manifest.json
examples/Valid.aosapp/: Valid.rpy  manifest.json
tests/: test_candella_sdk.py
